Main menu box styles and first link styles

--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,42 @@ body {
 	font-family: 'Ubuntu', sans-serif;
 	background-color: #333;
 }
+
+.box {
+	padding: 80px 140px;
+	border-radius: 15px;
+	background-color: #222;
+	box-shadow: 0 0 15px rgba(0, 140, 255, 0.6);
+}
+
+.link {
+	position: relative;
+	padding: 10px 20px;
+	font-size: 48px;
+	color: rgb(0, 140, 255);
+	text-decoration: none;
+}
+
+.link,
+.link::after,
+.link::before {
+	transition: 0.3s;
+}
+
+.one::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 3px;
+	width: 100%;
+	background-color: #fff;
+	transform: scaleX(0);
+	transform-origin: right;
+	transition: transform 0.3s;
+}
+
+.one:hover::after {
+	transform: scaleX(1);
+	transform-origin: left;
+}
