Styles for third menu link

--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,25 @@ body {
 	border-bottom: 3px solid #fff;
 	border-right: 3px solid #fff;
 }
+
+.three::before,
+.three::after {
+	content: '';
+	position: absolute;
+	width: 0;
+	bottom: 0;
+	border-bottom: 2px solid rgb(255, 255, 255);
+}
+
+.three::before {
+	right: 50%;
+}
+
+.three::after {
+	left: 50%;
+}
+
+.three:hover::before,
+.three:hover::after {
+	width: 50%;
+}
