--- a/css/main.css
+++ b/css/main.css
@@ -112,3 +112,26 @@ body {
 .three:hover::after {
 	width: 50%;
 }
+
+.four {
+	z-index: 0;
+}
+
+.four::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 0;
+	width: 100%;
+	background-color: #fff;
+	z-index: -1;
+}
+
+.four:hover {
+	color: #000000;
+}
+
+.four:hover::after {
+	height: 100%;
+}
