Styles for fifth menu link

--- a/css/main.css
+++ b/css/main.css
@@ -135,3 +135,55 @@ body {
 .four:hover::after {
 	height: 100%;
 }
+
+.five {
+	z-index: 0;
+}
+
+.five:hover {
+	animation: blink 0.5s;
+}
+
+.five::before,
+.five::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 0;
+	background-color: #fff;
+	z-index: -1;
+}
+
+.five::before {
+	left: 0;
+}
+
+.five::after {
+	right: 0;
+}
+
+.five:hover::before,
+.five:hover::after {
+	animation: background 0.5s 0.4s forwards;
+}
+
+@keyframes background {
+	from {
+		wiwdth: 0;
+	}
+
+	to {
+		width: 50%;
+	}
+}
+
+@keyframes blink {
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0;
+	}
+}
