Styles for cards 1 project

--- a/css/main.css
+++ b/css/main.css
@@ -187,3 +187,47 @@ body {
 		opacity: 0;
 	}
 }
+
+.cards {
+	display: flex;
+	width: 1000px;
+	margin-top: 50px;
+}
+
+.card {
+	position: relative;
+	margin: 10px;
+	height: 800px;
+	text-align: center;
+	background-position: center;
+	background-size: cover;
+	border-radius: 15px;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+}
+
+.cards .one {
+	background-image: url('../img/person-2.jpg');
+}
+
+.cards .two {
+	background-image: url('../img/person-1.jpg');
+}
+
+.cards button {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 10px;
+	background: none;
+	border: none;
+	color: #fff;
+	font-size: 36px;
+	text-shadow: 2px 2px 5px rgb(0, 0, 0);
+	cursor: crosshair;
+}
+
+.cards .text {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
