--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 	border-radius: 15px;
 	background-color: #222;
 	box-shadow: 0 0 15px rgba(0, 140, 255, 0.6);
+	display: none;
 }
 
 .menu .link {
@@ -192,6 +193,7 @@ body {
 	display: flex;
 	width: 1000px;
 	margin-top: 50px;
+	display: none;
 }
 
 .cards .card {
@@ -256,4 +258,33 @@ body {
 .cards h2 {
 	margin-bottom: 30px;
 	color: rgb(141, 138, 138);
+}
+
+.cards-2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #333;
+	overflow: hidden;
+}
+
+.cards-2 .card {
+	position: relative;
+	margin: 20px 80px;
+	width: 450px;
+	height: 700px;
+}
+
+.cards-2 .img {
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
+	border-radius: 15px;
+	transition: 0.8s;
+}
+
+.cards-2 .one {
+	background-image: url('../img/forest-2.jpg');
 }
