Animating third card in cards 2 project

--- a/css/main.css
+++ b/css/main.css
@@ -339,3 +339,46 @@ body {
 	transform: rotateY(-180deg);
 	opacity: 0;
 }
+
+.cards-2 .card:hover .three {
+	animation: up 0.8s;
+}
+
+.cards-2 .card:hover .text-three {
+	animation: down 0.8s;
+}
+
+@keyframes up {
+	0% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+
+	50% {
+		transform: translateY(-60%);
+	}
+
+	80% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+	}
+}
+
+@keyframes down {
+	0% {
+		transform: translateY(0);
+		z-index: -1;
+	}
+
+	50% {
+		transform: translateY(60%);
+		z-index: -1;
+	}
+
+	100% {
+		z-index: 1;
+	}
+}
