--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,9 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 100vh;
 	font-family: 'Ubuntu', sans-serif;
 	background-color: #333;
+	margin-top: 40px;
 }
 
 .menu {
@@ -19,7 +19,7 @@ body {
 	border-radius: 15px;
 	background-color: #222;
 	box-shadow: 0 0 15px rgba(0, 140, 255, 0.6);
-	display: none;
+	margin-bottom: 100px;
 }
 
 .menu .link {
@@ -193,7 +193,6 @@ body {
 	display: flex;
 	width: 1000px;
 	margin-top: 50px;
-	display: none;
 }
 
 .cards .card {
@@ -264,9 +263,9 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
 	background-color: #333;
 	overflow: hidden;
+	height: 1000px;
 }
 
 .cards-2 .card {
