--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,22 @@ body {
 	animation: down 0.8s;
 }
 
+.cards-3 .card {
+	position: relative;
+	width: 800px;
+	height: 400px;
+	border-radius: 15px;
+	overflow: hidden;
+}
+
+.cards-3 .bg-img {
+	width: 100%;
+	height: 100%;
+	background-image: url('../img/forest-background.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
 @keyframes up {
 	0% {
 		transform: translateY(0);
