Animating date for cards 3 project

--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,37 @@ body {
 	animation-delay: 2.2s;
 }
 
+.cards-3 .text {
+	position: absolute;
+	top: 111px;
+	left: 100px;
+	width: 260px;
+	height: 80px;
+	font-size: 36px;
+	color: #fff;
+	text-shadow: 2px 2px 5px #000;
+	overflow: hidden;
+}
+
+.cards-3 .text::before {
+	display: block;
+	position: absolute;
+	top: -60px;
+	left: 0;
+	content: '01/01/2024';
+	animation: slide-text 1s 3s forwards;
+}
+
+@keyframes slide-text {
+	from {
+		top: -60px;
+	}
+
+	to {
+		top: 10px;
+	}
+}
+
 @keyframes rotate-heading {
 	from {
 		transform: rotateY(90deg);
