--- a/css/main.css
+++ b/css/main.css
@@ -545,6 +545,15 @@ body {
 	right: 0;
 }
 
+.buttons .hmm {
+	border: none;
+	transition: 0.5s;
+}
+
+.buttons .hmm:hover {
+	box-shadow: 2px 3px 0 0 rgba(255, 255, 255, 0.8), inset 11px 6px 10px rgba(0, 0, 0.2);
+}
+
 @keyframes slide-text {
 	from {
 		top: -60px;
