--- a/css/main.css
+++ b/css/main.css
@@ -678,6 +678,55 @@ body {
 	animation-delay: 1s;
 }
 
+.navigation .two:hover .dropdown li {
+	animation: menu2 0.5s forwards;
+}
+
+.navigation .three:hover .dropdown li {
+	animation: menu3 0.5s forwards;
+}
+
+.navigation .four:hover .dropdown li {
+	animation: menu4 0.5s forwards;
+	transform-origin: top;
+}
+
+@keyframes menu4 {
+	from {
+		opacity: 0;
+		transform: scale(0.8) translatey(-40px);
+	}
+
+	to {
+		opacity: 1;
+		transform: scale(1) translatey(0);
+	}
+}
+
+@keyframes menu3 {
+	from {
+		opacity: 0;
+		transform: rotateY(-60deg) translateX(60px);
+	}
+
+	to {
+		opacity: 1;
+		transform: rotateY(0) translateX(6);
+	}
+}
+
+@keyframes menu2 {
+	from {
+		opacity: 0;
+		transform: translateY(60px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+
 @keyframes menu1 {
 	from {
 		opacity: 0;
